solve merge conflicts